kustomize/common-namespaces-dataplane/choreo-observability/netpol/sys-obsapi.yaml
# -------------------------------------------------------------------------------------
#
# Copyright (c) 2023, WSO2 LLC (http://www.wso2.com). All Rights Reserved.
#
# This software is the property of WSO2 LLC and its suppliers, if any.
# Dissemination of any information or reproduction of any material contained
# herein in any form is strictly forbidden, unless permitted by WSO2 expressly.
# You may not alter or remove any copyright or other notice from copies of this content.
#
# --------------------------------------------------------------------------------------

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-rules-sys-obsapi
spec:
  podSelector:
    matchLabels:
      choreo.component: sys-obsapi
  policyTypes:
  - Egress
  - Ingress
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0  # Allow all egress traffic
        except:
        - 169.254.169.254/32  # Except egress to Azure VM metadata endpoint
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: choreo-apim
      podSelector:
        matchLabels:
          cc.component: choreo-connect-deployment
